force-app/main/default/objects/Distribution__c/Distribution__c.object-meta.xml
<CustomObject>
    <label>Distribution</label>
    <nameField>
        <displayFormat>Dis-{0000}</displayFormat>
        <label>Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>