force-app/main/default/objects/Distribution__c/fields/Distributed_By__c.field-meta.xml
<CustomField>
    <fullName>Distributed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>