force-app/main/default/objects/Distribution__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <label>Donation</label>
    <referenceTo>Donation__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>