force-app/main/default/objects/Distribution__c/fields/Quantity_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Distributed__c</fullName>
    <label>Quantity Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>