force-app/main/default/objects/Distribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Donation__c</columns>
    <columns>Quantity_Distributed__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Distribution_Date__c</columns>
    <columns>Distributed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>